# aicli-config-bridge

./: .gitignore  CLAUDE.md  GEMINI.md  README-MCP-Integration.md  README.md  USAGE.md  agent.md  pyproject.toml
.cursor/rules/: python.md
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
docs/: SETUP_GUIDE.md
project-configs/: GEMINI.md  README-MCP-Integration.md  claude-settings-actual.json  claude-settings.json  gemini-settings-actual.json  gemini-settings.json  mcp-servers-config.json  mcp-shared-config.json
project-configs/hooks/: hook_pre_commands-actual.sh  hook_pre_commands.sh  hook_stop_words.sh
project-configs/hooks/rules/: hook_pre_commands_rules.json  hook_stop_words_rules.json
scripts/: README.md  sync_config_links.py
src/aicli_config_bridge/: __init__.py  cli.py
src/aicli_config_bridge/config/: __init__.py  manager.py  models.py
src/aicli_config_bridge/linker/: __init__.py  manager.py
src/aicli_config_bridge/setup/: __init__.py  manager.py  models.py
src/aicli_config_bridge/tools/: __init__.py  claude_code.py  gemini_cli.py  markdown_handler.py  mcp_handler.py
src/aicli_config_bridge/utils/: __init__.py  platform.py
symbolicLink/: .claude  .claude.json  .codex  .cursor  .gemini  AGENTS.md  CLAUDE.md
tests/: test_basic.py  test_config.py  test_linker.py  test_mcp_handler.py  test_platform.py  test_setup_manager.py  test_tools_handlers.py
